@@ -18,6 +18,8 @@ ver. 0.7.6 (200?/??/??) - ???
 - Several "failregex" and "ignoreregex" are now accepted.
   Creation of rules should be easier now.
 - Added license in COPYING. Thanks to Axel Thimm
+- Allow comma in action options. The value of the option must
+  be escaped with " or '. Thanks to Yaroslav Halchenko
 
 ver. 0.7.5 (2006/12/07) - beta
 ----------
